MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/PurposeOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>PurposeOfTransaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purpose of Transaction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>