MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Q_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>Q_ExternalID__c</fullName>
    <description>QHolding ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Q_ExternalID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>