MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Registration_Agent__c.field-meta.xml
<CustomField>
    <fullName>Registration_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Agent</label>
    <referenceTo>Registration_Agent__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>