MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Residency_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Residency_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Residency Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>