MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <label>Salary Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED 15K - AED 50K</fullName>
            </value>
            <value>
                <fullName>AED 50K - AED 100K</fullName>
            </value>
            <value>
                <fullName>AED 100K - AED 150K</fullName>
            </value>
            <value>
                <fullName>AED 150K - AED 250K</fullName>
            </value>
            <value>
                <fullName>Above AED 250K</fullName>
            </value>
            <value>
                <fullName>AED 0 - AED 25,000</fullName>
                <isActive>false</isActive>
                <label>AED 0 - AED 25,000</label>
            </value>
            <value>
                <fullName>AED 25,001 - AED 50,000</fullName>
                <isActive>false</isActive>
                <label>AED 25,001 - AED 50,000</label>
            </value>
            <value>
                <fullName>AED 50,001 - AED 75,000</fullName>
                <isActive>false</isActive>
                <label>AED 50,001 - AED 75,000</label>
            </value>
            <value>
                <fullName>AED 75,001 - AED 100,000</fullName>
                <isActive>false</isActive>
                <label>AED 75,001 - AED 100,000</label>
            </value>
            <value>
                <fullName>Over AED 100,000</fullName>
                <isActive>false</isActive>
                <label>Over AED 100,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>