MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/SamarroBrokerName__c.field-meta.xml
<CustomField>
    <fullName>SamarroBrokerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SamarroBrokerName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>