MODON MRE BPDEV/force-app/main/default/objects/Contact/fields/UnifiedNumber__c.field-meta.xml
<CustomField>
    <fullName>UnifiedNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unified Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>