MODON MRE BPDEV/force-app/main/default/objects/Contact/recordTypes/Broker_Agency.recordType-meta.xml
<RecordType>
    <fullName>Broker_Agency</fullName>
    <active>true</active>
    <label>Broker Agency</label>
</RecordType>