MODON MRE BPDEV/force-app/main/default/objects/Contact/recordTypes/BrokerAgent.recordType-meta.xml
<RecordType>
    <fullName>BrokerAgent</fullName>
    <active>true</active>
    <description>This record type is used for creating the broker agent records</description>
    <label>Broker Agent</label>
</RecordType>