MODON MRE BPDEV/force-app/main/default/objects/Contact/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <description>This record type is used to create the individuals under the Organization accounts</description>
    <label>Individual</label>
</RecordType>