MODON MRE BPDEV/force-app/main/default/objects/Contact/recordTypes/Shareholder.recordType-meta.xml
<RecordType>
    <fullName>Shareholder</fullName>
    <active>true</active>
    <label>Shareholder</label>
</RecordType>