MODON MRE BPDEV/force-app/main/default/objects/Contact/validationRules/EIDNumber_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>EIDNumber_Cannot_be_masked</fullName>
    <active>true</active>
    <description>Please do not enter masked values in Emirates ID Number</description>
    <errorConditionFormula>AND(
ISCHANGED(EIDNumber__c),
CONTAINS(EIDNumber__c, &apos;*&apos;)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Emirates ID Number</errorMessage>
</ValidationRule>