MODON MRE BPDEV/force-app/main/default/objects/Contact/validationRules/Email_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Email),
CONTAINS(Email, &apos;*&apos;)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Email</errorMessage>
</ValidationRule>