MODON MRE BPDEV/force-app/main/default/objects/Contact/validationRules/MBP_PreventAgentStatusUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>MBP_PreventAgentStatusUpdate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(

    ISCHANGED(Agent_Status__c),

    OR(
        ISPICKVAL(PRIORVALUE(Agent_Status__c),&quot;In Active&quot;),
        ISPICKVAL(PRIORVALUE(Agent_Status__c),&quot;Suspended&quot;),
        ISPICKVAL(PRIORVALUE(Agent_Status__c),&quot;Rejected&quot;),
        ISPICKVAL(PRIORVALUE(Agent_Status__c),&quot;Blocked&quot;)
    ),

    OR(
        ISPICKVAL(Agent_Status__c,&quot;Active&quot;),
        ISPICKVAL(Agent_Status__c,&quot;Pending Verification&quot;)
    )

)</errorConditionFormula>
    <errorMessage>Agent Status cannot be changed to Active or Pending Verification when the current status is In Active, Suspended, Rejected, or Blocked.</errorMessage>
</ValidationRule>