MODON MRE BPDEV/force-app/main/default/objects/Contact/validationRules/MobilePhone_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>MobilePhone_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(MobilePhone),
CONTAINS(MobilePhone, &apos;*&apos;)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Mobile</errorMessage>
</ValidationRule>