MODON MRE BPDEV/force-app/main/default/objects/Contact/validationRules/Phone_Cannot_be_masked.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Cannot_be_masked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Phone),
CONTAINS(Phone, &apos;*&apos;)
)</errorConditionFormula>
    <errorMessage>Please do not enter masked values in Phone</errorMessage>
</ValidationRule>