MODON MRE BPDEV/force-app/main/default/objects/Contact/validationRules/Sales_user_cant_update_contact_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_user_cant_update_contact_details</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
(ISCHANGED(Salutation) || ISCHANGED(RecordTypeId) || ISCHANGED(OwnerId) || 
 ISCHANGED(FirstName) || ISCHANGED(MiddleName) || ISCHANGED(LastName) || 
 ISCHANGED(Suffix)) &amp;&amp;
(CONTAINS($UserRole.DeveloperName, &apos;Sales_Associate&apos;) || 
 CONTAINS($UserRole.DeveloperName, &apos;Sales_Manager&apos;) || 
 CONTAINS($UserRole.DeveloperName, &apos;Sales_Director&apos;)) &amp;&amp;
NOT(ISPICKVAL(Source_Entity__c, &apos;Modon - Egypt&apos;))</errorConditionFormula>
    <errorMessage>Sales user cannot update contact details.</errorMessage>
</ValidationRule>