MODON MRE BPDEV/force-app/main/default/objects/Contact/listViews/All_Egypt_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Egypt_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Masked_Phone__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source_Entity__c</field>
        <operation>equals</operation>
        <value>Modon - Egypt</value>
    </filters>
    <label>All Egypt Contacts</label>
    <sharedTo>
        <group>Modon_Egypt_Finance_Team_Group</group>
    </sharedTo>
</ListView>