MODON MRE BPDEV/force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Masked_Phone__c</columns>
    <columns>Email__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
    <sharedTo>
        <role>Sales_Associate_T1</role>
        <role>Sales_Associate_T2</role>
        <role>Sales_Associate_T3</role>
        <role>Sales_Associate_T4</role>
        <role>Sales_Associate_T5</role>
        <role>Sales_Director</role>
        <role>Sales_Manager_T1</role>
        <role>Sales_Manager_T2</role>
        <role>Sales_Manager_T3</role>
        <role>Sales_Manager_T4</role>
        <role>Sales_Manager_T5</role>
        <role>Sales_Operations_Associate</role>
        <role>Sales_Operations_Manager</role>
        <role>Senior_Operations_Associate</role>
    </sharedTo>
</ListView>