MODON MRE BPDEV/force-app/main/default/objects/Contact/listViews/BulkMessageContacts.listView-meta.xml
<ListView>
    <fullName>BulkMessageContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Phone__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>En_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bulk_SMS_Contacts</label>
    <sharedTo>
        <role>Sales_Associate_T1</role>
        <role>Sales_Associate_T2</role>
        <role>Sales_Associate_T3</role>
        <role>Sales_Director</role>
        <role>Sales_Manager_T1</role>
        <role>Sales_Manager_T2</role>
        <role>Sales_Manager_T3</role>
        <role>Sales_Manager_T4</role>
        <role>Sales_Operations_Associate</role>
        <role>Sales_Operations_Manager</role>
        <role>Senior_Operations_Associate</role>
    </sharedTo>
</ListView>